--- a/detail/src/main/res/layout/activity_test_detail.xml
+++ b/detail/src/main/res/layout/activity_test_detail.xml
@@ -6,12 +6,13 @@
     android:layout_height="match_parent"
     tools:context="debug.TestDetailActivity">
 
-    <TextView
-        android:text="Test Detail"
+    <Button
+        android:text="Jump To Detail"
+        android:id="@+id/tv_test"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        />
+        android:layout_margin="12dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content" />
 </androidx.constraintlayout.widget.ConstraintLayout>
