--- a/me/src/main/res/layout/activity_test_me.xml
+++ b/me/src/main/res/layout/activity_test_me.xml
@@ -5,12 +5,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="debug.TestMeActivity">
-    <TextView
-        android:text="TEST ME"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+
+    <Button
+        android:id="@+id/tv_test"
+        android:layout_width="0dp"
+        android:layout_height="42dp"
+        android:layout_margin="20dp"
+        android:layout_marginTop="20dp"
+        android:gravity="center"
+        android:text="@string/str_key4"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
